tests/e2e/not_allowed/this.error
Error: syntax error in story at line 1, column 1

1|    this = 1
      ^^^^

E0030: `this` is reserved for future use
